Thu Oct  9 14:22:54 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * docs/Options.html:
          Document new client port options.

Wed Oct  8 22:34:58 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/ClientPortSpan/client.cpp:
          Clean up windows build.

Wed Oct  8 20:14:18 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/IIOP_Connector.cpp:
        * tao/ORB_Core.cpp:
        * tao/params.h:
        * tao/params.inl:
          New feature added to constrain client ORBs using IIOP to only use
          local TCP ports spanning a supplied range. Use new ORB_init
          parameters -ORBIIOPClientPortBase <base> and -ORBIIOPClientPortSpan
          <count> to specify a range from base to base + count. A base
          supplied without a span indicates the client may use only a single
          port. A span supplied without a base is silently ignored.

        * tests/ClientPortSpan:
        * bin/tao_orb_tests.lst:
          New test to validate and demonstrate the new feature.

Fri Oct  3 19:54:01 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/ImplRepo/ReconnectServer/ReconnectServer.mpc:
        * orbsvcs/tests/ImplRepo/ReconnectServer/build.xml:
        * orbsvcs/tests/ImplRepo/ReconnectServer/client.cpp:
        * orbsvcs/tests/ImplRepo/ReconnectServer/idl:
        * orbsvcs/tests/ImplRepo/ReconnectServer/java:
        * orbsvcs/tests/ImplRepo/ReconnectServer/run_test.pl:
        * orbsvcs/tests/ImplRepo/ReconnectServer/serverB.cpp:
        * orbsvcs/tests/ImplRepo/ReconnectServer/test_i.h:
        * orbsvcs/tests/ImplRepo/ReconnectServer/test.idl:
        * orbsvcs/tests/ImplRepo/ReconnectServer/README.txt:
          Added a JacORB client for interop testing. Refactored the
          directory layout to simplify the build for both C++ and Java.

Tue Sep 30 08:44:33 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp: